# MultiAgentLab_ILD

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: agents.yaml
data/: 02.txt  03.txt  04.txt
docs/: case_structurer_teaching_guide.md  phase_one_test_flow.html
docs/teach/: case_structurer_agent.md  evidence_atomizer_agent.md  evidence_tree_structurer_agent.md
results/phase1_trace/case_20260514_f0f93d43_20260514T082630Z/: case_level_summary.json  manifest.json
results/phase1_trace/case_20260515_02b36e2b_20260515T144802Z/: case_level_summary.json  manifest.json
results/phase1_trace/case_20260515_191ff2c7_20260515T133611Z/: case_level_summary.json  manifest.json
results/phase1_trace/case_20260515_1ef422a9_20260515T152656Z/: case_level_summary.json  manifest.json
scripts/: run_case_structurer_blackboard_trace.py  run_case_structurer_multi_input_blackboard_trace.py  run_phase1_interactive_trace.py
scripts/Phase_one_test/: phase_one_common.py  phase_one_outputs.py  phase_one_report.py  phase_one_summary.py  run_phase_one_test.py
src/config/: agent_config.py  settings.py
src/llm/: chatanywhere_client.py
src/prompts/: case_structurer.md
src/state/: __init__.py  write_event.py
src/storage/: placeholder.py
src/utils/: id_generator.py
src/validators/: __init__.py
tests/: test_chatanywhere_connectivity.py
tests/structure/: test_case_structurer_e2e.py  test_case_structurer_pipeline_trace.py  test_case_structurer_source_span_validation_correction_trace.py  test_source_span_corrector.py  test_source_span_resolver.py
(+436 files in other folders)
